--- a/Login Page/style/style.css
+++ b/Login Page/style/style.css
@@ -1,7 +1,9 @@
-div{
+.div1{
     width: 200px;
     height: 250px;
     border: 4px solid rgb(138, 15, 232);
+    display: flex;
+    justify-content: center;
 }
 label{
     font-size: 20px;
